# filekind

./: .gitignore  README.md  classify_prompts.example.txt  classify_prompts.example.yaml  filekind.spec  filekind_main.py  projects.example.yaml  pyproject.toml  使用说明.txt  构建说明.md
.cursor/rules/: auto-package-after-changes.mdc
.github/workflows/: ci.yml
filekind/: __init__.py  __main__.py  clerk_report.py  cli.py  config.py  frozen_entry.py  inventory.py  inventory_picker.py  models.py  path_utils.py  pipeline.py  prompts.py  run_summary.py
filekind/apply/: executor.py
filekind/classify/: __init__.py  candidates.py  cluster.py  llm.py  report.py  rules.py
filekind/extract/: __init__.py  image.py  ocr.py  office.py  pdf.py  router.py  text.py
filekind/plan/: planner.py
filekind/scan/: scanner.py
sample-inbox/: OMS接口说明.txt  销售笔记.txt
scripts/: build_executable.sh  bundle_dist.py  download_llm_model.py  pyi_rth_paddle.py  run-filekind-debug.bat  run-filekind.bat  run_pyinstaller.py  smoke_test_build.py  双击可整理文件.command
tests/: test_apply.py  test_candidates.py  test_classify_report.py  test_clerk_report.py  test_config_path.py  test_empty_inbox.py  test_inventory.py  test_inventory_picker.py  test_office_extract.py  test_pdf_extract.py  test_planner.py  test_prompts.py  test_rules.py  test_run_paths.py  test_run_summary.py  test_windows_launcher.py
